--- a/index.html
+++ b/index.html
@@ -272,11 +272,21 @@
 				margin: 0 auto;
 				position: relative;
 			}
+			.artical-action-mid{
+				position: fixed;
+				z-index: 10002;
+				width: 100%;
+				height: 40%;
+				top:30%;
+			}
 		</style>
 	</head>
 	<body>
 		<div id="root" class="container">
-			<div id="top-nav" class="top-nav">
+			<div class="m-artical-action">
+				<div class="artical-action-mid" id="action-mid"></div>
+			</div>
+			<div id="top-nav" class="top-nav" style="display:none">
 				<div class="icon-back"></div>
 				<div class="nav-title">返回书架</div>
 			</div>
@@ -298,8 +308,8 @@
 				</ul>
 			</div>
 			
-			<div class="nav-pannel-bk"></div>
-			<div class="nav-pannel" id="font-container">
+			<div class="nav-pannel-bk font-container" style="display:none"></div>
+			<div class="nav-pannel font-container" id="font-container" style="display:none">
 				<div class="chlid-mod">
 					<span>字号</span>
 					<button id="large-button" class="font-size-button">大</button>
@@ -324,9 +334,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="bottom-nav-bk bottom_nav"></div>
+			<div class="bottom-nav-bk bottom_nav" style="display:none"></div>
 
-			<div class="bottom-nav bottom_nav">
+			<div class="bottom-nav bottom_nav" style="display:none">
 				<div class="item menu-button" id="menu_button">
 					<div class="item-warp">
 						<div class="icon-menu"></div>
@@ -367,7 +377,81 @@
 		<script src="js/jquery.jsonp.js"></script>
 
 		<script>
-			
+			(function(){
+				var Util = (function(){
+					var prefix = 'html_reader_';//由于localSotrage是键值队类型的，这样赋值可以避免别人覆盖掉我们的值
+					var StorageGetter =function(key){
+						return localStorage.getItems(prefix + key);
+					}
+					var StorageSetter = function(key,val){
+						return localStorage.setItem(prefix + key,val);
+					}
+					return{
+						StorageGetter : StorageGetter,
+						StorageSetter : StorageSetter
+					}
+				})();
+				var Dom = {
+					top_nav :$("#top-nav"),
+					bottom_nav:$(".bottom_nav"),
+					font_container :$(".font-container"),
+					font_button:$("#font-button")
+				}
+				var Win = $(window);
+				var Doc = $(document);
+				function main(){
+					//todo 整个项目的入口函数
+					EventHanlder();
+				}
+				function ReaderModel(){
+					//todo 实现和阅读器相关的数据交互的方法
+				}
+
+				function ReaderBaseFrame(){
+					//todo 实现基本的ui结构
+				}
+
+				function EventHanlder(){
+					//todo 交互的事件绑定
+					//touch
+					//zepto tap
+					//安卓4.0 click 300ms 延时
+					//tap 只针对移动端
+					$('#action-mid').click(function(){
+						if(Dom.top_nav.css("display") == 'none'){
+							Dom.bottom_nav.show();
+							Dom.top_nav.show();
+						}else {
+							Dom.bottom_nav.hide();
+							Dom.top_nav.hide();
+							Dom.font_container.hide();
+							Dom.font_button.removeClass('current');
+						}
+					});
+					Dom.font_button.click(function(){
+						if(Dom.font_container.css('display')=='none'){
+							Dom.font_container.show();
+							Dom.font_button.addClass('current');
+						}else {
+							Dom.font_container.hide();
+							Dom.font_button.removeClass('current');
+						}
+					});
+					$('#nigth-button').click(function(){
+						//todo 触发背景切换的事件
+					});
+
+					Win.scroll(function(){
+						Dom.bottom_nav.hide();
+						Dom.top_nav.hide();
+						Dom.font_container.hide();
+						Dom.font_button.removeClass('current');
+					});
+				}
+
+				main();
+
+			}) ();//闭包不会影响全局
 		</script>
 	</body>
 </html>
